<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/user"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/list"
            android:title="@string/list" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/travel"
            android:title="@string/moments" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/favorite"
            android:title="@string/highlights" />
    </group>
      <item android:title="">
          <menu>
              <item
                  android:id="@+id/nav_send"
                  android:title="@string/setting_privacy" />

              <item
                  android:id="@+id/nav_settings"
                  android:title="@string/help_center" />

              <item
                  android:id="@+id/nav_night_mode"
                  android:title="@string/night_mode"
                  android:actionLayout="@layout/switch_item_layout"
                  />

              <item
                  android:id="@+id/nav_qr_code"
                  android:title="@string/QRScanner" />
          </menu>
      </item>
</menu>
